--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.30",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
