--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-spinners": "^0.14.1",
-    "router-dom": "^3.0.1"
+    "router-dom": "^3.0.1",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
